# oxidize

./: Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: keyboard.rs  macros.rs  main.rs  screen.rs
src/screen/: singleton.rs
