[package]
name = "oxidize"
version = "0.1.0"
authors = ["Victor Antoniazzi <vgsantoniazzi@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.8"
pc-keyboard = "0.5.0"
pic8259 = "0.10.1"
spin = "0.5.2"
x86_64 = "0.14.5"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
